# SDK_241115

./: .gitignore  README.md  build.cmd
application/bt_watch/: CMakeLists.txt  Kconfig  README.rst  linker.ld  linker_psram_4m.ld  prj.conf
bootloader/: .build_config  CMakeLists.txt  Kconfig.zephyr  build.cmd  build.py  ninja2mdk.cmd  tag.yml
bootloader/boards/: Kconfig
bootloader/drivers/: CMakeLists.txt  Kconfig
bootloader/framework/: CMakeLists.txt  Kconfig
bootloader/include/: fw_version.h  kernel.h  sw_isr_table.h  toolchain.h
bootloader/kernel/: Kconfig  Kconfig.acts  cpuload_stat.c  device.c  init.c  kheap.c  mailbox.c  system_work_q.c  thread.c  work.c  xip.c
bootloader/lib/: CMakeLists.txt  Kconfig
bootloader/subsys/: CMakeLists.txt  Kconfig
bootloader/tools/: build_boot_image.py  build_firmware.py  build_ota_image.py
framework/audio/: CMakeLists.txt  Kconfig  audio_aps.c  audio_device.h  audio_policy.c  audio_policy.h  audio_record.c  audio_record.h  audio_system.c  audio_system.h  audio_track.c  audio_track.h  audio_tws_aps.c  audio_tws_aps_snoop.c  bluetooth_tws_observer.c  bluetooth_tws_observer.h  volume_manager.c  volume_manager.h
framework/base/: Kconfig
framework/bluetooth/: CMakeLists.txt  Kconfig
framework/display/ui_service/: CMakeLists.txt  gesture.c  msgbox_cache_lvgl.c  view_cache.c  view_cache_lite.c  view_stack.c
framework/display/ui_service/effects/: CMakeLists.txt  effects_inner.h  scroll_effect.c  switch_effect.c
framework/display/ui_service/lvgl/: CMakeLists.txt  lvgl_input_dev.c  lvgl_input_dev.h  lvgl_view.c
zephyr/: .gitignore  CMakeLists.txt  Kconfig.zephyr  build.py  gdbcore.init  sdk-reset.sh  tag.yml  west.yml
zephyr/framework/sensor/sensor_algo/SensorAlgoHR_GH3x2x/: CMakeLists.txt  hr_algo.c
zephyr/framework/sensor/sensor_algo/SensorAlgoHR_GH3x2x/GH3x2x_src/: gh3x2x_demo_algo_call.c  gh3x2x_demo_algo_call_ecg.c  gh3x2x_demo_algo_call_hrv.c  gh3x2x_demo_algo_config.c  gh3x2x_demo_algo_config.h  gh3x2x_demo_algo_hook.c  gh3x2x_demo_algo_memory.c  gh3x2x_demo_algo_memory.h  gh3x2x_demo_common.h  gh3x2x_demo_mp.c  gh3x2x_demo_mp.h  gh3x2x_demo_mp_process.c  gh3x2x_demo_mp_process.h  gh3x2x_demo_mp_user.c  gh3x2x_mp_algorithm.c  gh3x2x_mp_algorithm.h  gh3x2x_mp_common.h  gh3x2x_mp_config.h  gh3x2x_mp_define.h  gh3x2x_mp_param_config.c  gh3x2x_mp_param_config.h  gh3x2x_mp_reg_config.c  gh3x2x_mp_reg_config.h  gh_agc.c  gh_agc.h  gh_demo.c  gh_demo_config.h  gh_demo_hook.c  gh_demo_reg_array.c  gh_demo_user.c  gh_drv.h  gh_drv_control.c  gh_drv_interface.c  gh_ecg.c  gh_movedetect.c  gh_uprotocol.c  goodix_algo.h  goodix_log.h
(+2615 files in other folders)
